# chip-8

./: .gitignore  CMakeLists.txt
src/: audio.c  audio.h  chip8.c  chip8.h  chip8_t.h  debug.c  debug.h  instructions.c  instructions.h  keyboard.c  keyboard.h  main.c  video.c  video.h
